# AIRClass

./: .env.example  .gitignore  ARCHITECTURE.md  BUG_FIX_REPORT.md  CHANGELOG.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  LICENSE  MANUAL_TEST_GUIDE.md  Makefile  PROGRESS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TEST_ANALYSIS_REPORT.md  TODO_2026-02-03.md  TURN_SERVER_SETUP.md  WEBRTC_MIGRATION.md  airclass.bat  airclass.sh  docker-compose.simple.yml  docker-compose.yml  docker-compose.yml.bak  install.sh  livekit-client.js  load_test_viewers.sh  logs.bat  setup.sh  stop-dev.sh  stop.bat  stop.sh  test_browser.sh  test_cluster_streaming.sh  test_full_system.py  test_livekit.html  test_load_balancing.sh  test_routing.py  test_webrtc_sdp.js  test_websocket.py
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  PHASE2_완료.md  PHASE3_계획.md  README.md  TESTING_REPORT.md  TEST_COVERAGE_ANALYSIS.md  TEST_SUMMARY.md  UV_GUIDE.md  ai_nlp.py  ai_vision.py  cluster.py  config.py  database.py  discovery.py  docker-entrypoint.sh  engagement.py  engagement_listener.py  gemini_service.py  main.py  main.py.bak  mediamtx-main.yml  mediamtx-main.yml.bak  mediamtx-master.yml  mediamtx-sub.template.yml  mediamtx-sub.yml  mediamtx.yml  messaging.py  models.py  pyproject.toml  pytest.ini  recording.py  requirements.txt  requirements_streaming.txt  rtmp-proxy.sh  start.bat  teacher_ai_keys.py  vod_storage.py  (+1 more)
backend/core/: __init__.py  ai_keys.py  cache.py  cluster.py  database.py  discovery.py  livekit_config.py  livekit_manager.py  messaging.py  metrics.py  totp_utils.py
backend/docs/: CURRENT_TASKS.md
backend/routers/: ai_analysis.py  auth.py  cluster.py  dashboard.py  engagement.py  livekit.py  mediamtx_auth.py  mediamtx_proxy.py  monitoring.py  quiz.py  recording.py  system.py  vod.py  websocket_routes.py
backend/schemas/: __init__.py  chat.py  common.py  engagement.py  quiz.py  session.py
backend/scripts/: quick_verify.py
backend/services/: __init__.py  engagement_listener.py  engagement_service.py  recording_service.py  vod_service.py
backend/static_streaming/: monitor.html  teacher.html  test.html  test_viewer.html  video_viewer.html
backend/stream/: stream.m3u8
backend/tests/: conftest.py  test_ai_analysis.py  test_confusion_detection.py  test_dashboard_router.py  test_engagement_calculator.py  test_engagement_router.py  test_integration_engagement.py  test_recording.py  test_teacher_ai_keys.py
backend/utils/: __init__.py  jwt_auth.py  mediamtx.py  (+4 more)
(+132 files in other folders)
