[project]
name = "airclass-backend"
version = "2.0.0"
description = "AIRClass real-time WebRTC streaming backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "qrcode>=7.4.2",
    "pillow>=10.0.0",
    "zeroconf>=0.131.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "redis>=5.0.0",
    "motor>=3.3.0",
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "asyncio: mark test as async",
]
