[project]
name = "airclass-backend"
version = "2.0.0"
description = "AIRClass real-time WebRTC streaming backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "qrcode>=7.4.2",
    "pillow>=10.0.0",
    "zeroconf>=0.131.0",
    "redis>=5.0.0",
    "motor>=3.3.0",
    "google-genai>=0.3.0",
    "livekit>=0.11.0",
    "livekit-api>=0.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-playwright>=0.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-playwright>=0.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "asyncio: mark test as async",
]
